{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 24,
  "lineage": "0799b76a-3feb-3da4-102f-2e89aef9b71c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08faf7dd0753f1ecf",
            "domain": "vpc",
            "id": "eipalloc-08faf7dd0753f1ecf",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-131-182-75.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.182.75",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0647643ae6c501f77",
            "domain": "vpc",
            "id": "eipalloc-0647643ae6c501f77",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-136-42-201.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.42.201",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:internet-gateway/igw-08fe1644e87c8f918",
            "id": "igw-08fe1644e87c8f918",
            "owner_id": "590458663149",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590458663149:loadbalancer/app/example-lb/d1aad06b0e5a80f2",
            "arn_suffix": "app/example-lb/d1aad06b0e5a80f2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-lb-428850941.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:590458663149:loadbalancer/app/example-lb/d1aad06b0e5a80f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-000328f417c5c52fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0015e3ac4acf2359a"
              },
              {
                "subnet_id": "subnet-0b4d25f9dd910c44e"
              }
            ],
            "subnets": [
              "subnet-0015e3ac4acf2359a",
              "subnet-0b4d25f9dd910c44e"
            ],
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-022e8359fb5370576",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590458663149:listener/app/example-lb/d1aad06b0e5a80f2/800f9832b21a23a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590458663149:targetgroup/example-target-group/82166c27f2d6e1a4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590458663149:listener/app/example-lb/d1aad06b0e5a80f2/800f9832b21a23a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:590458663149:loadbalancer/app/example-lb/d1aad06b0e5a80f2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Name": "ecs-demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.hello_world",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590458663149:targetgroup/example-target-group/82166c27f2d6e1a4",
            "arn_suffix": "targetgroup/example-target-group/82166c27f2d6e1a4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590458663149:targetgroup/example-target-group/82166c27f2d6e1a4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "ecs-demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08faf7dd0753f1ecf",
            "connectivity_type": "public",
            "id": "nat-0bca299575fcfbcbe",
            "network_interface_id": "eni-0020a27c17ab4013c",
            "private_ip": "10.32.2.125",
            "public_ip": "3.131.182.75",
            "subnet_id": "subnet-0b4d25f9dd910c44e",
            "tags_all": {
              "Name": "ecs-demo"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0647643ae6c501f77",
            "connectivity_type": "public",
            "id": "nat-0dcb0f2a022a4cf94",
            "network_interface_id": "eni-0e45256c408c1c667",
            "private_ip": "10.32.3.95",
            "public_ip": "3.136.42.201",
            "subnet_id": "subnet-0015e3ac4acf2359a",
            "tags_all": {
              "Name": "ecs-demo"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08fe1644e87c8f918",
            "id": "r-rtb-0af7378d576000dae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af7378d576000dae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:route-table/rtb-0539ba5b007e94d0c",
            "id": "rtb-0539ba5b007e94d0c",
            "owner_id": "590458663149",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bca299575fcfbcbe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Name": "ecs-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:route-table/rtb-0fb9971b6e204cd2d",
            "id": "rtb-0fb9971b6e204cd2d",
            "owner_id": "590458663149",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dcb0f2a022a4cf94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Name": "ecs-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8f6e3cb582fb50d",
            "route_table_id": "rtb-0539ba5b007e94d0c",
            "subnet_id": "subnet-00f64f8fd4a1aceeb"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b259a8acb262ab",
            "route_table_id": "rtb-0fb9971b6e204cd2d",
            "subnet_id": "subnet-0b7ab8332e01412b5"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello_world_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:security-group/sg-09b1c7ae34aa8ea61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b1c7ae34aa8ea61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000328f417c5c52fb"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "example-task-security-group",
            "name_prefix": "",
            "owner_id": "590458663149",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "ecs-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:security-group/sg-000328f417c5c52fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000328f417c5c52fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-alb-security-group",
            "name_prefix": "",
            "owner_id": "590458663149",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "ecs-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:subnet/subnet-00f64f8fd4a1aceeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f64f8fd4a1aceeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590458663149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:subnet/subnet-0b7ab8332e01412b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7ab8332e01412b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590458663149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:subnet/subnet-0b4d25f9dd910c44e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d25f9dd910c44e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590458663149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:subnet/subnet-0015e3ac4acf2359a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0015e3ac4acf2359a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590458663149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "ecs-demo"
            },
            "vpc_id": "vpc-022e8359fb5370576"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590458663149:vpc/vpc-022e8359fb5370576",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0a3f34a2e3295dca2",
            "default_route_table_id": "rtb-0af7378d576000dae",
            "default_security_group_id": "sg-0c775b3f887b6bd36",
            "dhcp_options_id": "dopt-063f7b69a11296294",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022e8359fb5370576",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af7378d576000dae",
            "owner_id": "590458663149",
            "tags_all": {
              "Name": "ecs-demo"
            }
          }
        }
      ]
    }
  ]
}